v3.0.000:
- Rollback netcode:
  Should be mostly stable right now, with a few extremely rare desyncs.
  Set rollback as needed (max 15 frames) to compensate for laggy / spikey networks.
  Can adjust rollback in-game with Alt + Number.
  Training mode rollback is untested.
- Automatic updates, checks on application startup by default.
- Moved max delay and max rollback to settings.
- Changed the spacebar to toggle fast-forward when spectating.

v2.1i:
- Fix crash caused by multiple spectators.
- Fix hang when quitting at the spectate menu.
- Prevent music from restarting in training mode.

v2.1h:
- Can set max allowed delay when hosting.
- Optional FPS control setting, try this if you often get FPS drops.

v2.1g:
- Fixed incorrectly repeated input at round start and after training mode reset.
- Fixed occasional connect timeout caused by relay server being down.
- Prevent changing delay (via Ctrl + Number) if the game is not focused.

v2.1f:
- Fixed getting stuck on fetching IP address.
- Fixed startup issue when launching from the browser.

v2.1e:
- Fixed input drop issue from v2.1d.
- Fixed hidden stages having incorrect music.
- Fixed spectator names sometimes being swapped.
- Fixed some minor issues with spectating, should be more stable now.
- Added Versus CPU offline mode.
- Allow choosing 0 delay when netplaying.
- Reverted the training reset to what it was like in v2.0d.

v2.1d:
- In-game mapping automatically moves to next key.
- Fixed keyboard mapping not working in-game.
- Fixed diagonals not working for analog joysticks.
- Internal changes to controller handling, should hopefully fix the rare bug
  where buttons stop working for a bit. You'll need to reconfigure your controller.

v2.1c:
- Skip startup configuration window.
- Also more stable way to choose the game mode (versus/training).
  (Thanks to plumcot for the assembly code to do these two things)

v2.1b:
- Fixed startup issue on Windows XP.